refactor: P3C 规约修正（getFirst、集合工具）